# MarkdownViewer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  setup.py  tsconfig.json  vite.config.ts
app/: Cargo.toml  build.rs  tauri.conf.json
app/capabilities/: default.json
app/src/: commands.rs  lib.rs  main.rs  protocol.rs
docs/: P3.md  P4.md  P5.md  P6.md  P7.md  architecture.md  product-summary.md  unimplemented.md
docs/adr/: ADR-001-framework-tauri-v2.md  ADR-002-markdown-parser-remark.md  ADR-003-syntax-highlighter-shiki.md  ADR-004-diagram-renderer-mermaid.md  ADR-005-plugin-bundle-architecture.md  ADR-006-product-scope.md  ADR-007-cross-platform-strategy.md  ADR-008-file-write-ipc.md  README.md
docs/requirements/: P0.md  P1.md  P2.md  P3.md  P5.md  P6.md  P7.md  README.md  unimplemented.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: file.rs  mod.rs  watcher.rs
src/renderer/: mermaid.ts  pipeline.ts  sanitize.ts
src/styles/: app.css
src/ui/: drop.ts  theme.ts
ui/: main.ts
ui/events/: drag.ts  links.ts  recent.ts  search.ts  theme.ts  toc.ts
ui/renderer/: mermaid.ts  pipeline.ts  sanitize.ts
ui/styles/: app.css
