[package]
name = "markdown_viewer"
version = "0.1.0"
description = "A fast markdown + mermaid viewer"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "markdown_viewer"
path = "src/main.rs"

[lib]
name = "markdown_viewer_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Icon generation from icon.svg — runs once on first build, cached thereafter.
resvg = "0.44"
icns  = "0.3"
ico   = "0.3"

[dependencies]
tauri                        = { version = "2", features = [] }
tauri-plugin-dialog          = "2"
tauri-plugin-window-state    = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link       = "2"

# File watching — uses FSEvents on macOS, ReadDirectoryChangesW on Windows
notify      = "6"
serde_json  = "1"
mime_guess  = "2"
urlencoding = "2"

[features]
# custom-protocol activates the markdownviewer:// URI scheme registration
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
