[package]
name = "markview"
version = "0.1.0"
description = "A fast markdown + mermaid viewer"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "markview"
path = "src/main.rs"

[lib]
name = "markview_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog         = "2"
tauri-plugin-shell          = "2"
tauri-plugin-store          = "2"
tauri-plugin-window-state   = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link      = "2"

# File watching — uses FSEvents on macOS, ReadDirectoryChangesW on Windows
# The notify crate abstracts both; no platform-specific code needed in our watcher
notify     = "6"
tokio      = { version = "1", features = ["rt", "sync", "time"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
urlencoding = "2"

[features]
# custom-protocol activates the markview:// URI scheme registration
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
